client/src/partition/partition_subapp/PartitionSubApp.scss
@import '../../common_css/common-variables';

$partitionBackgroundColour: $primaryColor;
$partitionPopupColour: $secondaryColor;

.partition-container {
  padding-top: 10px;
  padding-bottom: 110px;
  margin-bottom: -50px; //counter-act .mrgn-bttm-xl on main
  background-color: $partitionBackgroundColour;

  & > .partition-diagram-outer-area {
    margin-left: 20px;
    margin-right: 100%;
  }

  & > .partition-bg-fill {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: $partitionBackgroundColour;
    z-index: -1;

    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
      // Disable in IE, too choppy
      position: relative;
      width: 0%;
      height: 0%;
    }
  }
}

.partition-diagram-outer-area > .partition-fader {
  height: 100%;
  width: inherit;
  position: absolute;
  background-color: rgba( $partitionBackgroundColour, 0.81);
  border-radius: 10px;
  z-index: 101;
}


.partition-diagram-outer-area > .partition-notes {
  margin-bottom: 10px;
  overflow-y: hidden;
}


.partition-diagram-outer-area > .partition-controls {
  width: inherit;
  min-width: inherit;
  background-color: $partitionBackgroundColour;

  & > .partition-controls--form-horizontal {
    display: flex;
    flex-direction: row;
    position: relative;
    padding: 15px;
    padding-top: 9px;

    & > .partition-controls--control {
      display: flex;
      flex-direction: column;
      padding-right: 9px;
    
      & > .partition-info-icon {
        width: 70px;
        margin-left: -10px;
        z-index: 101;
      }
      
      & > text {
        color: $textLightColor;
        font-size: 20px;
        font-weight: $lightFontWeight;
      }
      
      & > input.form-control.search {
        &:disabled {
          cursor: default;
        }
        &::-ms-clear {
          width: 0;
          height: 0;
        }
      }
      
      /* Over-ride bootstrap .form-control width style */
      & > select.form-control {
        font-weight: $mediumFontWeight;
      }
    }
  }
}

.partition-popup.partition-intro {
  z-index: 102;
  border: 3px solid $partitionPopupColour; 
  top: 100px; 
  left: 0px;
  width: 800px;

  & > .intro-popup-color { 
    color: $partitionPopupColour;
  }
  & > .popup-intro-text {
    line-height:1; 
    text-align:left;

    & > ul.partition-intro-two-col-list {
      width: 100%;
      display: inline-block;
      & > li {
        float: left;
        width: 50%;
        padding-right: 20px;
      }
    }
  }
  & > .popup-pointer-up {
    top: -40px;
    left: 12px;
    position: absolute;
    width: 0;
    height: 0;
    border-left: 25px solid transparent;
    border-bottom: 40px solid lighten($tertiaryColor, 40%);
    border-right: 25px solid transparent;
  }
}

